Link to relevant open and closed sympy issues on GitHub

--- a/integral_sympy_problem.ipynb
+++ b/integral_sympy_problem.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +211,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that in the discussion of issue [15402](https://github.com/sympy/sympy/issues/15402), the [0, 2pi] interval does seem to be where solvers work for trigonometric functions. As of sympy version 1.6.1: \n",
+    "* `Integral` with evalf(), but not doit() seems to work well\n",
+    "* `integrate` does not. \n",
+    "\n",
+    "(As such, closed issue [17791](https://github.com/sympy/sympy/issues/17791) is perhaps not an exact duplicate of issue [15402](https://github.com/sympy/sympy/issues/15402).)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Definite integral from 7*pi/2 to 9*pi/2 with...\n",
+      "...integrate: -2.00000000000000\n",
+      "...Integral and evalf: 2.00000000000000\n",
+      "...Integral and doit: -2\n",
+      "The correct value is 2 if 9*pi/2 minus 7*pi/2 is pi.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 7*pi/2\n",
+    "b = 9*pi/2\n",
+    "\n",
+    "print(f\"Definite integral from {a} to {b} with...\")\n",
+    "res_integrate = integrate(eq1, (x, a, b) ).evalf()\n",
+    "res_integral = Integral(eq1, (x, a, b) ).evalf()\n",
+    "res_integral_doit = Integral(eq1, (x, a, b) ).doit()\n",
+    "print(\"...integrate:\", res_integrate)\n",
+    "print(\"...Integral and evalf:\", res_integral)\n",
+    "print(\"...Integral and doit:\", res_integral_doit)\n",
+    "print(f\"The correct value is 2 if {b} minus {a} is pi.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Definitions to display sympy's solutions"
    ]
   },
@@ -247,331 +289,6 @@
     "    display(a_eval)\n",
     "    print(\"F(b) - F(a) is\")\n",
     "    return b_eval - a_eval\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Some definite integrals by sympy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A correctly calculated integral by sympy:\n",
-      "Integral according to sympy of\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left|{\\cos{\\left(x \\right)}}\\right|$"
-      ],
-      "text/plain": [
-       "Abs(cos(x))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "from\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\pi}{4}$"
-      ],
-      "text/plain": [
-       "pi/4"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "to\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{3 \\pi}{4}$"
-      ],
-      "text/plain": [
-       "3*pi/4"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "is:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 2 - \\sqrt{2}$"
-      ],
-      "text/plain": [
-       "2 - sqrt(2)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The value should be\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 2 - \\sqrt{2}$"
-      ],
-      "text/plain": [
-       "2 - sqrt(2)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "An incorrectly calculated integral:\n",
-      "Integral according to sympy of\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left|{\\cos{\\left(x \\right)}}\\right|$"
-      ],
-      "text/plain": [
-       "Abs(cos(x))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "from\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\frac{\\pi}{2}$"
-      ],
-      "text/plain": [
-       "-pi/2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "to\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\pi}{2}$"
-      ],
-      "text/plain": [
-       "pi/2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "is:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The value should be 2\n",
-      "\n",
-      "According to sympy...\n",
-      "F is\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\begin{cases} - \\sin{\\left(x \\right)} & \\text{for}\\: x \\leq 0 \\\\\\sin{\\left(x \\right)} & \\text{for}\\: x \\leq \\frac{\\pi}{2} \\\\2 - \\sin{\\left(x \\right)} & \\text{for}\\: x \\leq \\frac{3 \\pi}{2} \\\\\\sin{\\left(x \\right)} + 4 & \\text{for}\\: x \\leq 2 \\pi \\\\4 - \\sin{\\left(x \\right)} & \\text{otherwise} \\end{cases}$"
-      ],
-      "text/plain": [
-       "Piecewise((-sin(x), x <= 0), (sin(x), x <= pi/2), (2 - sin(x), x <= 3*pi/2), (sin(x) + 4, x <= 2*pi), (4 - sin(x), True))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b is\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\pi}{2}$"
-      ],
-      "text/plain": [
-       "pi/2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F(b) is\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 1.0$"
-      ],
-      "text/plain": [
-       "1.00000000000000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a is\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\frac{\\pi}{2}$"
-      ],
-      "text/plain": [
-       "-pi/2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F(a) is\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 1.0$"
-      ],
-      "text/plain": [
-       "1.00000000000000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F(b) - F(a) is\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "if True:\n",
-    "    print(\"A correctly calculated integral by sympy:\")\n",
-    "    a = pi/4\n",
-    "    b = 3*pi/4\n",
-    "    display(integrate_def(a, b))\n",
-    "    print(\"The value should be\")\n",
-    "    display(2 - sqrt(2))\n",
-    "    \n",
-    "    \n",
-    "    print(\"\\nAn incorrectly calculated integral:\")\n",
-    "    a = -pi/2\n",
-    "    b = pi/2\n",
-    "    display(integrate_def(a, b))\n",
-    "    print(\"The value should be\", 2)\n",
-    "    \n",
-    "    print(\"\\nAccording to sympy...\")\n",
-    "    res = integrate_def_NL(a, b)\n",
-    "    display(res)"
    ]
   },
   {
